5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1764_672.log
== TEST (2019-05-21 00:38:59) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 00:39:12) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- EXECUTION TIME:
0.462687
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 00:39:16) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- EXECUTION TIME:
0.47576
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 00:39:18) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- EXECUTION TIME:
0.601758
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 00:39:20) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 00:39:49) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- EXECUTION TIME:
0.339836
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 00:40:00) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 00:40:00) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 00:41:03) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- EXECUTION TIME:
0.448937
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 00:41:04) 
-- CODE:
from numpy import*

v1=ones(6,dtype=int)
print(v1)
-- EXECUTION TIME:
0.373879
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 00:42:53) 
-- CODE:
from numpy import*

v1 = ones ( 6 , dtype=int )

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 00:43:38) 
-- CODE:
from numpy import*

v1 = ones ( 6 , dtype=int )

print(v1)
-- EXECUTION TIME:
0.420991
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:05:12) 
-- CODE:
from numpy import*

v1 = ones (6 , dtype=int )

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:05:40) 
-- CODE:
from numpy import*

v1 = ones (6 , dtype=int )
print([v1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:05:45) 
-- CODE:
from numpy import*

v1 = ones (6 , dtype=int )
print([v1])
-- EXECUTION TIME:
0.452714
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:05:57) 
-- CODE:
from numpy import*

v1 = ones (6 , dtype=int )
print([v1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:06:07) 
-- CODE:
from numpy import*

v1 = ones (6 , dtype=int )
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:06:09) 
-- CODE:
from numpy import*

v1 = ones (6 , dtype=int )
print(v1)
-- EXECUTION TIME:
0.568895
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:06:53) 
-- CODE:
from numpy import*
v1=int(input("digite um numero: "))
v1 = ones (6 , dtype=int )
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:06:59) 
-- CODE:
from numpy import*
v1=int(input("digite um numero: "))
v1 = ones (6 , dtype=int )
print(v1)
-- EXECUTION TIME:
0.340727
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:07:05) 
-- CODE:
from numpy import*
v1=int(input("digite um numero: "))
v1 = ones (6 , dtype=int )
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:07:19) 
-- CODE:
from numpy import*
v=int(input("digite um numero: ")
v = ones (6 , dtype=int )
print(v1)
-- ERROR:
File "XXXX", line 3
    v = ones (6 , dtype=int )
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:07:31) 
-- CODE:
from numpy import
v1 = ones (6 , dtype=int )
print(v1)
-- ERROR:
File "XXXX", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:07:39) 
-- CODE:
from numpy import*
v1 = ones (6 , dtype=int )
print(v1)
-- EXECUTION TIME:
0.449524
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:07:40) 
-- CODE:
from numpy import*
v1 = ones (6 , dtype=int )
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:07:42) 
-- CODE:
from numpy import*
v1 = ones (6 , dtype=int )
print(v1)
-- EXECUTION TIME:
0.451996
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:07:43) 
-- CODE:
from numpy import*
v1 = ones (6 , dtype=int )
print(v1)
-- EXECUTION TIME:
1.41257
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:07:44) 
-- CODE:
from numpy import*
v1 = ones (6 , dtype=int )
print(v1)
-- EXECUTION TIME:
2.6762
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:07:44) 
-- CODE:
from numpy import*
v1 = ones (6 , dtype=int )
print(v1)
-- EXECUTION TIME:
2.68663
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:07:44) 
-- CODE:
from numpy import*
v1 = ones (6 , dtype=int )
print(v1)
-- EXECUTION TIME:
2.23255
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:08:15) 
-- CODE:
from numpy import*
v6 = ones (6 , dtype=int )
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:08:22) 
-- CODE:
from numpy import*
v6 = ones (6 , dtype=int )
print(v6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:08:27) 
-- CODE:
from numpy import*
v6 = ones (6 , dtype=int )
print(v6)
-- EXECUTION TIME:
0.497733
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:08:33) 
-- CODE:
from numpy import*
v6 = ones (1 , dtype=int )
print(v6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:08:44) 
-- CODE:
from numpy import*
v6 = ones (6 , dtype=int )
print(v6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:08:49) 
-- CODE:
from numpy import*
v6 = ones (6 , dtype=int )
print(v6)
-- EXECUTION TIME:
0.381206
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:08:55) 
-- CODE:
from numpy import*
v = ones (6 , dtype=int )
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:08:58) 
-- CODE:
from numpy import*
v = ones (6 , dtype=int )
print(v)
-- EXECUTION TIME:
0.370467
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:09:17) 
-- CODE:
from numpy import*
v = ones (6 , dtype=int )
print(v,dtype=int)
-- EXECUTION TIME:
0.578865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 3, in <module>
    print(v,dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:09:18) 
-- CODE:
from numpy import*
v = ones (6 , dtype=int )
print(v,dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:09:18) 
-- CODE:
from numpy import*
v = ones (6 , dtype=int )
print(v,dtype=int)
-- EXECUTION TIME:
0.345095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 3, in <module>
    print(v,dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:09:36) 
-- CODE:
from numpy import*
v = ones (6 , dtype=int )
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:11:58) 
-- CODE:
from numpy import*
n = array(eval(input("digite um numero")))
v = ones (6 , dtype=int )

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:12:10) 
-- CODE:
from numpy import*
n = array(eval(input("digite um numero")))
n = ones (6 , dtype=int )

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:12:15) 
-- CODE:
from numpy import*
n = array(eval(input("digite um numero")))
n = ones (6 , dtype=int )

print(n)
-- EXECUTION TIME:
0.540477
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:13:19) 
-- CODE:
from numpy import*
n = ones (6 , dtype=int )
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:13:27) 
-- CODE:
from numpy import*
n = ones (6 , dtype=int )
	print(n)
-- EXECUTION TIME:
0.148038
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 3
    print(n)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:13:28) 
-- CODE:
from numpy import*
n = ones (6 , dtype=int )
	print(n)
-- EXECUTION TIME:
0.166637
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 3
    print(n)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:13:29) 
-- CODE:
from numpy import*
n = ones (6 , dtype=int )
	print(n)
-- EXECUTION TIME:
0.145591
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 3
    print(n)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:13:43) 
-- CODE:
from numpy import*
n = one (6 , dtype=int )
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:00) 
-- CODE:
from numpy import*
n = ones (6 , dtype=int )
print(n)
-- EXECUTION TIME:
0.331961
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:02) 
-- CODE:
from numpy import*
n = ones (6 , dtype=int )
print(n)
-- EXECUTION TIME:
0.571332
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:03) 
-- CODE:
from numpy import*
n = ones (6 , dtype=int )
print(n)
-- EXECUTION TIME:
0.793032
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:18) 
-- CODE:
from numpy import*
n = ones ([0]6 , dtype=int )
print(n)
-- ERROR:
File "XXXX", line 2
    n = ones ([0]6 , dtype=int )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:31) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:32) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:36) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print(n)
-- EXECUTION TIME:
0.541448
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:42) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:56) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:56) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- EXECUTION TIME:
0.563356
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:56) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:56) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:56) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:14:57) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:59) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- EXECUTION TIME:
2.05329
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:59) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- EXECUTION TIME:
1.81457
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:59) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- EXECUTION TIME:
1.79454
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 01:14:59) 
-- CODE:
from numpy import*
n = ones ([6] , dtype=int )
print([n])
-- EXECUTION TIME:
1.92404
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 1, 1, 1, 1, 1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 01:15:12) 
-- CODE:
from numpy import*
n = ones (6 , dtype=int )
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:59:50) 
-- CODE:
from numpy import*
x=int(input("digite um numero: "))
v = ones (x, dtype=int )
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 15:59:52) 
-- CODE:
from numpy import*
x=int(input("digite um numero: "))
v = ones (x, dtype=int )
print(v)
-- EXECUTION TIME:
0.401275
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:47:46) 
-- CODE:
from numpy import*
x=int(input("digite um numero: "))
v = ones (x, dtype=int )
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:48:10) 
-- CODE:
from numpy import*
x=int(input("digite um numero: "))
v = zero (x, dtype=int )
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:48:18) 
-- CODE:
from numpy import*
x=int(input("digite um numero: "))
v = zeros (x, dtype=int )
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:48:32) 
-- CODE:
from numpy import*
x=int(input("digite um numero: "))
v = five (x, dtype=int )
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
